# file-hasher

./: .gitignore  Cargo.toml
legacy/: README.md  main.py  requirements.txt
legacy/src/: parse_args.py
src/: main.rs
