[package]
name = "file-hasher"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[[bin]]
name = "file-hasher"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "std"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2.5"
anyhow = "1.0"
regex = "1.10"
eframe = "0.31"
rfd = "0.15"
crossbeam-channel = "0.5"
